--- a/public/index.html
+++ b/public/index.html
@@ -41,5 +41,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script type="text/javascript" src="%PUBLIC_URL%/fabric.min.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/jsts@2.7.1/dist/jsts.min.js"></script>
+
   </body>
 </html>
